apps/xwiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xwiki
  namespace: xwiki
  labels:
    app: xwiki
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: xwiki
